fix: correct spacing for join requests table

--- a/src/components/JoinRequests/JoinRequests.module.scss
+++ b/src/components/JoinRequests/JoinRequests.module.scss
@@ -56,3 +56,7 @@
   border-left: solid 10px g.$secondary-blue;
   padding-left: 20px;
 }
+
+.titleContainer {
+  padding-bottom: 20px;
+}
